# quicktex

./: .readthedocs.yaml  CHANGELOG.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
docs/reference/: dds.rst  image_utils.rst  index.rst  quicktex.rst
docs/reference/s3tc/: bc1.rst  bc3.rst  bc4.rst  bc5.rst  index.rst
quicktex/: Matrix4x4.h  Vector4.h  Vector4Int.h
quicktex/s3tc/bc1/: _bindings.cpp
