[metadata]
# until setuptools supports PEP621, this will have to do
name = quicktex
description = A fast block compression library for python
author = Andrew Cassidy
author_email = drewcassidy@me.com
license = LGPLv3
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown

keywords = DDS, S3TC, Texture, Pillow, PIL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Utilities

project_urls =
    Source = https://github.com/drewcassidy/quicktex
    Changelog = https://github.com/drewcassidy/quicktex/blob/main/CHANGELOG.md

[options]
install_requires =
    Click >= 7.0, < 9.0
    Pillow >= 8.0
python_requires = >= 3.7
packages = find:

[options.extras_require]
docs =
    Sphinx >= 3.5
    sphinx-click >= 2.7
    sphinx-rtd-theme
    myst-parser >= 0.14
tests =
    nose
    parameterized
stubs =
    pybind11-stubgen

[options.entry_points]
console_scripts =
    quicktex = quicktex.__main__:main

[options.packages.find]
exclude = tests.*